opam-version: "1.2"
name:         "radis"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/radis"
bug-reports:  "https://github.com/dinosaure/radis/issues"
dev-repo:     "https://github.com/dinosaure/radis.git"
doc:          "https://dinosaure.github.io/radis/"
license:      "MIT"
synopsis:     "Radix tree on string"

build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build}
  "fmt"
  "seq"
  "alcotest" {with-test}
]

available: [ocaml-version >= "4.06.0"]
