(executable
 (name macro)
 (modules macro)
 (public_name radis.macro)
 (libraries radis astring benchmark digestif.c)
 (flags (:standard -w +a-4-42-44-48-50-58-32-60@8 -safe-string -color always))
 (ocamlopt_flags (:standard -O3 -color always
                   -unbox-closures -unbox-closures-factor 20)))
(executable
 (name micro)
 (modules micro)
 (public_name radis.micro)
 (libraries radis astring core_bench digestif.c)
 (flags (:standard -w +a-4-42-44-48-50-58-32-60@8 -safe-string -color always))
 (ocamlopt_flags (:standard -O3 -color always
                   -unbox-closures -unbox-closures-factor 20)))
